# app_customers

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
scripts/: init_pubsub.py  start.dev.sh  start.sh
src/: __init__.py  main.py  worker.py
src/adapters/: __init__.py
src/adapters/api/: __init__.py
src/adapters/api/v1/customers/: __init__.py  router.py
src/adapters/api/v1/health_check/: router.py
src/adapters/cache/: __init__.py  redis_cache.py
src/adapters/consumers/: __init__.py  consumer_manager.py
src/adapters/consumers/handlers/: __init__.py  create_customer_handler.py
src/adapters/consumers/pubsub_consumers/: __init__.py  pubsub_consumer.py
src/adapters/database/: base.py  create_tables.py  session.py
src/adapters/database/repositories/: __init__.py  base_repository.py  customer_repository.py
src/adapters/publishers/: __init__.py  base_publisher.py  customer_message_adapter.py  exceptions.py  pubsub_publisher.py
src/config/: __init__.py  logging.py  settings.py
src/di/: __init__.py
src/di/v1/: __init__.py  consumers.py  get_create_customer_uc.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: customer.py  message.py
src/domain/models/: __init__.py  base.py  customer.py
src/domain/services/: __init__.py  customer_service.py
src/domain/value_objects/: email.py
src/usecases/: __init__.py
src/usecases/ports/: __init__.py  consumer_handler_interface.py  consumer_interface.py  cor_handler_interface.py  repositories.py  repositories_interface.py  unit_of_work.py  unit_of_work_interface.py  usecase_interface.py
src/usecases/v1/: __init__.py
src/usecases/v1/customers/: __init__.py  create_customer.py
src/usecases/v1/customers/handlers/: __init__.py  domain_validation_handler.py  publish_handler.py  redis_check_handler.py
src/usecases/v1/customers/ports/: customer_publisher.py  customer_repositories.py  db_customer_repository.py  repositories.py
src/usecases/v1/di/: get_create_customer_uc.py
src/usecases/v1/schemas/: customer.py
src/usecases/v1/schemas/api/: customer.py
src/usecases/v1/schemas/base/: customer.py  customer_registration_context.py  message_schema.py
tests/: test_architecture.py
